crates/zendriver-mcp/tests/snapshots/schema_snapshots__storage_set_in.snap
---
source: crates/zendriver-mcp/tests/schema_snapshots.rs
expression: "schema_for! (tools::storage::StorageSetInput)"
---
$schema: "https://json-schema.org/draft/2020-12/schema"
title: StorageSetInput
description: "Input for `browser_storage_set`."
type: object
properties:
  key:
    description: Key to set.
    type: string
  kind:
    description: Which storage area to write.
    $ref: "#/$defs/StorageKind"
  value:
    description: "Value to associate with `key`. Treated as opaque text by Chrome."
    type: string
additionalProperties: false
required:
  - kind
  - key
  - value
$defs:
  StorageKind:
    description: Which DOM storage area to target.
    oneOf:
      - description: "`window.localStorage` (persists across tab restarts)."
        type: string
        const: local
      - description: "`window.sessionStorage` (cleared on tab close)."
        type: string
        const: session
